--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -6,5 +6,9 @@
   },
   "navigation": {
     "product": "المنتج"
+  },
+  "breadCrumb": {
+    "home": "الصفحة الرئيسية",
+    "product": "المنتج"
   }
 }
