add delete action

--- a/src/locales/ar/product.json
+++ b/src/locales/ar/product.json
@@ -26,7 +26,8 @@
       "description": "الوصف",
       "ratio": "نسبة",
       "createdDate": "تاريخ الانشاء",
-      "balance": "الرصيد"
+      "balance": "الرصيد",
+      "actions": ""
     }
   }
 }
